tests/error/type_errors/not_subscriptable.py
from guppylang.decorator import guppy


@guppy
def foo(x: int) -> None:
    x[0]


guppy.compile(foo)
