tests/error/type_errors/not_subscriptable.err
Error: Not subscriptable (at $FILE:6:4)
  | 
4 | @guppy
5 | def foo(x: int) -> None:
6 |     x[0]
  |     ^ Expression of type `int` is not subscriptable

Guppy compilation failed due to 1 previous error
